# svgpath

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  setup.py  svg_converter.py  svg_functions.py  svg_peg.py  svg_symbols.py  test.py
.github/workflows/: ci.yaml
src/svgpath/: __init__.py  cli.py  converter.py  peg.py  plot.py  symbols.py
svgpath/: __init__.py  converter.py  functions.py  peg.py  plot.py  symbols.py  transforms.py
svgtrace/: __init__.py  converter.py  peg.py  plot.py  symbols.py
tests/: test_svg_parsing.py
tests/resources/svgs/: README.md
