[metadata]
name = svgpath
version = 1.0.1
author = Raub Camaioni
description = Pure python converter: SVG -> List[Tuple[float, float]]
keywords = svg points plot parse
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8
packages = svgpath